feat: Adds workspace suspend
